Created an event to the toilet button and a listener to the results obj

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="cell shrink">
                 <div class="grid-x grid-margin-x">
-                    <div class="cell small-6 text-center"> TOILETS </div>
+                    <div class="cell small-6 text-center" id="toilets-div"> TOILETS </div>
                     <div class="cell small-6 text-center"> WATER </div>
                 </div>
             </div>
