--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,8 +26,8 @@
             </div>
             <div class="cell shrink">
                 <div class="grid-x grid-margin-x">
-                    <div class="cell small-6 text-center" id="toilets-div"> TOILETS </div>
-                    <div class="cell small-6 text-center"> WATER </div>
+                    <div class="cell small-6 text-center" id="toilets-div" amenity="toilets"> TOILETS </div>
+                    <div class="cell small-6 text-center" id="drinking-water-div" amenity="drinking_water"> WATER </div>
                 </div>
             </div>
         </div>
