--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,8 +26,12 @@
             </div>
             <div class="cell shrink">
                 <div class="grid-x grid-margin-x">
-                    <div class="cell small-6 text-center" id="toilets-div" amenity="toilets"> TOILETS </div>
-                    <div class="cell small-6 text-center" id="drinking-water-div" amenity="drinking_water"> WATER </div>
+                    <div class="cell small-6 text-center">
+                        <button type="button" class="button" id="toilets-btn" amenity="toilets">Toilets</button>
+                    </div>
+                    <div class="cell small-6 text-center">
+                        <button type="button" class="button" id="drinking-water-btn" amenity="drinking_water">Drinking Water</button>
+                    </div>
                 </div>
             </div>
         </div>
