--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <!-- <script src="../static/js/vendor/jquery.js"></script> -->
-    <script src="../static/js/vendor/what-input.js"></script>
+    <!-- <script src="../static/js/vendor/what-input.js"></script> -->
     <!-- <script src="../static/js/vendor/foundation.min.js"></script> -->
     <!-- <script src="../static/js/app.js"></script> -->
 
