--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,12 +6,15 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foundation Starter Template</title>
+    
     <link rel="stylesheet" href="../static/css/foundation.min.css">
     <link rel="stylesheet" href="../static/css/app.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 
     <!-- <script src="../static/js/common.js"></script> -->
-    <script src="../static/js/common-pure.js"></script>
+    <script type="module" src="../static/js/vendor/what-input.js"></script>
+    <script type="module" src="../static/js/common-pure.js"></script>
+    
 
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
@@ -41,7 +44,7 @@
     </div>
 
     <!-- <script src="../static/js/vendor/jquery.js"></script> -->
-    <!-- <script src="../static/js/vendor/what-input.js"></script> -->
+    
     <!-- <script src="../static/js/vendor/foundation.min.js"></script> -->
     <!-- <script src="../static/js/app.js"></script> -->
 
