Solved the tap issue on the leaflet map

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 
     <!-- <script src="../static/js/common.js"></script> -->
-    <script type="module" src="../static/js/vendor/what-input.js"></script>
+    <!-- <script type="module" src="../static/js/vendor/what-input.js"></script> -->
     <script type="module" src="../static/js/common-pure.js"></script>
     
 
