--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,7 @@
 
     <!-- <script src="../static/js/common.js"></script> -->
     <!-- <script type="module" src="../static/js/vendor/what-input.js"></script> -->
+    <script type="module" src="../static/js/map.js"></script>
     <script type="module" src="../static/js/common-pure.js"></script>
     
 
